更新 GitHub Actions 工作流程，使用 GitHub Secrets 管理敏感环境变量

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,13 +23,47 @@ jobs:
         with:
           node-version: "18.x"
       # 复制环境变量文件
-      - name: Copy .env.example
+      - name: Setup env file
         run: |
-          if (-not (Test-Path .env)) {
-            Copy-Item .env.example .env
-          } else {
-            Write-Host ".env file already exists. Skipping the copy step."
-          }
+          # 创建基本的.env文件
+          "# 站点信息" | Out-File -FilePath .env -Encoding utf8
+          "VITE_SITE_NAME = `"八六的站点`"" | Out-File -FilePath .env -Append -Encoding utf8
+          "VITE_SITE_AUTHOR = `"八六`"" | Out-File -FilePath .env -Append -Encoding utf8
+          "VITE_SITE_KEYWORDS = `"八六,个人主页`"" | Out-File -FilePath .env -Append -Encoding utf8
+          "VITE_SITE_DES = `"前端工程师的个人小窝`"" | Out-File -FilePath .env -Append -Encoding utf8
+          "VITE_SITE_URL = `"HaR`"" | Out-File -FilePath .env -Append -Encoding utf8
+          "VITE_SITE_LOGO = `"/images/icon/favicon.ico`"" | Out-File -FilePath .env -Append -Encoding utf8
+          "VITE_SITE_MAIN_LOGO = `"/images/icon/logo.png`"" | Out-File -FilePath .env -Append -Encoding utf8
+          "VITE_SITE_APPLE_LOGO = `"/images/logo/apple-touch-icon.png`"" | Out-File -FilePath .env -Append -Encoding utf8
+
+          "# 简介文本" | Out-File -FilePath .env -Append -Encoding utf8
+          "VITE_DESC_HELLO = `"Here is HacchiRoku~`"" | Out-File -FilePath .env -Append -Encoding utf8
+          "VITE_DESC_TEXT = `"你好，我是八六，是前后端工程师，同时也是个WebGL特效开发工程师以及服务器运维。详情请使用电脑浏览此网页并且点击该区域亦或是欢迎与我取得联系~`"" | Out-File -FilePath .env -Append -Encoding utf8
+          "VITE_DESC_HELLO_OTHER = `"よこそ〜`"" | Out-File -FilePath .env -Append -Encoding utf8
+          "VITE_DESC_TEXT_OTHER = `"再点一次就什么都不会再有了哇`"" | Out-File -FilePath .env -Append -Encoding utf8
+
+          "# 社交链接" | Out-File -FilePath .env -Append -Encoding utf8
+          "## 请在 src/assets/socialLinks.json 文件中配置" | Out-File -FilePath .env -Append -Encoding utf8
+
+          "# 网站链接" | Out-File -FilePath .env -Append -Encoding utf8
+          "## 请在 src/assets/siteLinks.json 文件中配置" | Out-File -FilePath .env -Append -Encoding utf8
+
+          "# 天气 Key" | Out-File -FilePath .env -Append -Encoding utf8
+          "VITE_QWEATHER_KEY = `"${{ secrets.ENV_QWEATHER_KEY }}`"" | Out-File -FilePath .env -Append -Encoding utf8
+
+          "# 建站日期" | Out-File -FilePath .env -Append -Encoding utf8
+          "VITE_SITE_START = `"2022-01-01`"" | Out-File -FilePath .env -Append -Encoding utf8
+
+          "# ICP 备案号" | Out-File -FilePath .env -Append -Encoding utf8
+          "VITE_SITE_ICP = `"`"" | Out-File -FilePath .env -Append -Encoding utf8
+
+          "# 歌曲 API 地址" | Out-File -FilePath .env -Append -Encoding utf8
+          "VITE_SONG_API = `"${{ secrets.ENV_SONG_API }}`"" | Out-File -FilePath .env -Append -Encoding utf8
+          "VITE_SONG_SERVER = `"netease`"" | Out-File -FilePath .env -Append -Encoding utf8
+          "VITE_SONG_TYPE = `"playlist`"" | Out-File -FilePath .env -Append -Encoding utf8
+          "VITE_SONG_ID = `"${{ secrets.ENV_SONG_ID }}`"" | Out-File -FilePath .env -Append -Encoding utf8
+
+          Write-Host "Created .env file with values from GitHub Secrets"
       # 安装项目依赖
       - name: Install Dependencies
         run: npm install
