--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,3 +78,37 @@ jobs:
         with:
           name: Home
           path: dist
+
+      # 部署到远程服务器
+      - name: Deploy to server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          port: ${{ secrets.SERVER_PORT }}
+          key: ${{ secrets.SERVER_KEY }}
+          # password: ${{ secrets.SERVER_PASSWORD }} # 如果使用密码认证，取消此行注释并删除上面的key行
+          source: "dist/*"
+          target: ${{ secrets.SERVER_PATH }}
+          rm: true # 删除目标目录中的旧文件
+          strip_components: 1 # 去掉dist目录结构
+
+      # 设置Nginx并重启服务
+      - name: Setup Nginx and restart
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          port: ${{ secrets.SERVER_PORT }}
+          # key: ${{ secrets.SERVER_KEY }}
+          password: ${{ secrets.SERVER_PASSWORD }} # 如果使用密码认证
+          script: |
+            # 确保目标目录存在
+            mkdir -p ${{ secrets.SERVER_PATH }}
+
+            # 设置正确的权限
+            sudo chown -R ${{ secrets.SERVER_USERNAME }}:www-data ${{ secrets.SERVER_PATH }}
+            sudo chmod -R 755 ${{ secrets.SERVER_PATH }}
+
+            # 如果需要，重新加载Nginx配置
+            sudo systemctl reload nginx
