--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
       - master
 
 jobs:
-  release:
+  build:
     name: Build Website
     runs-on: windows-latest
 
@@ -73,8 +73,22 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
       # 上传构建产物
-      - name: Upload artifacts
+      - name: Upload artifacts for GitHub
         uses: actions/upload-artifact@v4
+        with:
+          name: Home
+          path: dist
+          retention-days: 1
+
+  deploy:
+    name: Deploy to Server
+    runs-on: ubuntu-latest
+    needs: build # 确保在构建完成后才运行部署
+
+    steps:
+      # 下载构建产物
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
         with:
           name: Home
           path: dist
@@ -86,12 +100,11 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           port: ${{ secrets.SERVER_PORT }}
-          key: ${{ secrets.SERVER_KEY }}
-          # password: ${{ secrets.SERVER_PASSWORD }} # 如果使用密码认证，取消此行注释并删除上面的key行
+          password: ${{ secrets.SERVER_PASSWORD }}
           source: "dist/*"
           target: ${{ secrets.SERVER_PATH }}
-          rm: true # 删除目标目录中的旧文件
-          strip_components: 1 # 去掉dist目录结构
+          rm: true
+          strip_components: 1
 
       # 设置Nginx并重启服务
       - name: Setup Nginx and restart
@@ -100,8 +113,7 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           port: ${{ secrets.SERVER_PORT }}
-          # key: ${{ secrets.SERVER_KEY }}
-          password: ${{ secrets.SERVER_PASSWORD }} # 如果使用密码认证
+          password: ${{ secrets.SERVER_PASSWORD }}
           script: |
             # 确保目标目录存在
             mkdir -p ${{ secrets.SERVER_PATH }}
