将key放置为环境变量

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,10 @@ VITE_DESC_TEXT_OTHER = "这里是另一段介绍文字"
 ## 若此处设为空则调用 教书先生 API https://api.oioweb.cn/doc/weather/GetWeather
 VITE_QWEATHER_KEY = ""
 
+# IP API Key
+## 请前往 https://ipapi.co/ 注册账号并获取 API Key
+VITE_IPGEOLOCATION_KEY = ""
+
 # 建站日期
 ## 若不需要，请设为空即可
 ## 请按照 YYYY-MM-DD 格式填写或者仅填写年份 YYYY
