--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "home",
-  "author": "imsyy",
-  "github": "https://github.com/ArisaTaki/Shader-Template",
+  "author": "Hacchiroku",
+  "github": "https://github.com/ArisaTaki/my-home",
   "home": "https://fufubest.com",
   "private": true,
-  "version": "0.1.3",
+  "version": "0.1.42",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
     "format": "prettier --write src/",
-    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.vue --fix"
+    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.vue --fix",
+    "prepare": "husky"
   },
   "dependencies": {
     "@worstone/vue-aplayer": "^1.0.6",
@@ -32,6 +33,7 @@
     "@vitejs/plugin-vue": "^4.6.2",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.25.0",
+    "husky": "^9.1.7",
     "prettier": "^3.2.5",
     "sass": "^1.75.0",
     "terser": "^5.30.4",
